--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   },
   "homepage": "https://github.com/renanaragao/chart",
   "engines": {
-        "node": ">= 0.10.0"
-    },
+    "node": ">= 0.10.0"
+  },
   "devDependencies": {
-        "karma": "~0.12.0",
-        "karma-cli": "*",
-        "karma-jasmine": "~0.1.0",
-        "karma-phantomjs-launcher": "*",
-        "karma-chrome-launcher": "*"
-    }
+    "jquery": "^2.1.4",
+    "karma": "~0.12.0",
+    "karma-chrome-launcher": "*",
+    "karma-cli": "*",
+    "karma-jasmine": "~0.1.0",
+    "karma-phantomjs-launcher": "*"
+  }
 }
