--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-uglify": "^0.9.2",
     "jquery": "^2.1.4",
     "karma": "~0.12.0",
     "karma-chrome-launcher": "*",
